<resources>

	<string name="app_name">NHS CFH Reference Pack</string>
	<string name="app_description">An android implementation of the NHS Connecting for Health Interoperability Specifications Reference Pack</string>
	<string name="app_alignmentText">This version aligns with version %s of the NHS CFH published product. </string>
	<string name="version">Version : %s </string>
	<string name="menu_settings">Settings</string>
	<string name="menu_help">Help</string>
	<string name="title_activity_main">Reference Pack</string>

	<string name="oids">OIDS</string>
	<string name="subsets">SNOMED Subsets</string>
	<string name="v3vocabs">V3 Vocabularies</string>
	<string name="v2vocabs">V2 Tables</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
    <string name="empty">empty empty empty empty</string>
	
	<string-array name="showfilter_list">
		<item>All</item>
		<item>Favorites</item>
		<item>Unseen/Upcoming</item>
		<item>Hidden</item>
	</string-array>
</resources>