<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menu_viewOids" android:showAsAction="ifRoom|withText"
		android:title="@string/oids" />

	<item android:id="@+id/menu_viewSubsets" android:showAsAction="ifRoom|withText"
		android:title="@string/subsets" />

	<item android:id="@+id/menu_viewVocabs" android:showAsAction="ifRoom|withText"
		android:title="@string/v3vocabs" />
	
	<item android:id="@+id/menu_viewTables" android:showAsAction="ifRoom|withText"
		android:title="@string/v2vocabs" />
	
	<item android:id="@+id/menu_settings" android:title="@string/menu_settings"
		android:orderInCategory="100" android:showAsAction="never" />
	
	<item android:id="@+id/menu_help" android:title="@string/menu_help"
		android:orderInCategory="100" android:showAsAction="never" />
</menu>
