<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="@dimen/padding_small">
    <TextView android:id="@+id/Heading001" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:gravity="left|center_horizontal" 
        android:paddingLeft="@dimen/padding_small" 
        android:paddingTop="@dimen/padding_large" 
        android:text="@string/name" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView android:id="@+id/TextViewOidDlg01" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:gravity="left|center_horizontal"
		android:paddingLeft="@dimen/padding_small" 
		android:paddingRight="@dimen/padding_small"
		android:paddingTop="@dimen/padding_large" 
		android:text="@string/empty" />
	<TextView android:id="@+id/Heading002" 
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="left|center_horizontal" 
	    android:paddingLeft="@dimen/padding_small" 
	    android:paddingTop="@dimen/padding_large" 
	    android:text="@string/description" 
	    android:textAppearance="?android:attr/textAppearanceLarge"/>
	<TextView android:id="@+id/TextViewOidDlg02" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:gravity="left|center_horizontal" 
	    android:paddingLeft="@dimen/padding_small" 
	    android:paddingRight="@dimen/padding_small" 
	    android:paddingTop="@dimen/padding_large" 
	    android:text="@string/empty"/>

</LinearLayout>